feat(ss): names for subsystems
fix issue caused by 'undefined' name set in backend, UI adjustments

Refs: XRDDEV-2761

--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -10,6 +10,7 @@
     "decline": "Decline",
     "generateCsr": "Generate CSR",
     "rename": "Rename",
+    "addName": "Add subsystem name",
     "select": "Select"
   },
   "apiKey": {
