feat: As a Security Server Administrator I would like to be able to see the memory usage of the proxy component in the diagnostics page so that I can visually see what the current usage is
refs: XRDDEV-2834

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -270,6 +270,16 @@
       "title": "OCSP responders"
     },
     "previousUpdate": "Previous Update",
+    "proxyMemoryUsage": {
+      "title": "Proxy memory usage",
+      "max": "Maximum memory",
+      "total": "Total allocated memory",
+      "used": "Used memory",
+      "threshold": "Threshold",
+      "usagePercent": "Used memory (%)",
+      "ok": "Everything ok",
+      "alertOverThreshold": "Warning: Proxy's memory usage is above configured threshold"
+    },
     "serviceUrl": "Service URL",
     "status": "Status",
     "timestamping": {
