--- a/src/packages/src/xroad/ubuntu/generic/changelog
+++ b/src/packages/src/xroad/ubuntu/generic/changelog
@@ -1,3 +1,10 @@
+xroad (7.6.2-1) stable; urgency=medium
+
+  * Change history is found at /usr/share/doc/xroad-
+    common/CHANGELOG.md.gz
+
+ -- NIIS <info@niis.org>  Thu, 03 Apr 2025 12:25:51 +0000
+
 xroad (7.6.1-1) stable; urgency=medium
 
   * Change history is found at /usr/share/doc/xroad-
