--- a/src/shared-ui/src/locales/es.json
+++ b/src/shared-ui/src/locales/es.json
@@ -151,7 +151,7 @@
     "backup_file_not_found": "La copia de seguridad no se encontró",
     "backup_generation_failed": "No se pudo generar la copia de seguridad",
     "backup_restore_interrupted": "La restauración de la copia de seguridad ha sido interrumpida",
-    "core" : {
+    "core": {
       "Signer": {
         "CertNotFound": "No se encuentra el certificado",
         "KeyNotFound": "No se encuentra la clave",
@@ -163,6 +163,7 @@
       }
     },
     "generate_backup_interrupted": "La generación de la copia de seguridad ha sido interrumpida",
+    "internal_error": "Error interno. Consulte los registros del servidor para más detalles",
     "invalid_backup_file": "Archivo de copia de seguridad no válido",
     "invalid_certificate": "Certificado X.509 no válido",
     "invalid_distinguished_name": "El nombre distinguido no es válido",
@@ -174,6 +175,7 @@
     "token_weak_pin": "El código PIN proporcionado era demasiado débil",
     "tr": {
       "check_signer_logs": "Consulte el registro (log) del firmante para más detalles.",
+      "code": "Código: {0}",
       "pin_min_char_classes_count": "Cantidad mínima de clases de caracteres para el PIN: {0}",
       "pin_min_length": "Longitud mínima: {0}"
     },
