--- a/src/shared-ui/src/locales/ru.json
+++ b/src/shared-ui/src/locales/ru.json
@@ -1,35 +1,109 @@
 {
-  "locals_demo": "Это локализовано в библиотеке",
-  "type": "Тип",
-  "warning": "Предупреждение",
-  "fields": {
-    "password": "Пароль",
-    "username": "LIB-Имя пользователя",
-    "shared": "sharedlib",
-    "code": "Код",
-    "description": "Описание"
-  },
   "action": {
-    "cancel": "Отмена",
+    "activate": "Активировать",
     "add": "Добавить",
-    "yes": "Да",
+    "addClient": "Добавить клиента",
+    "addMember": "Добавить участника",
+    "addSubsystem": "Добавить подсистему",
+    "cancel": "Отмена",
+    "close": "Закрыть",
+    "confirm": "Подтвердить",
+    "continue": "Продолжить",
+    "copy": "Копировать",
+    "copyId": "Скопировать ID",
+    "deactivate": "Отключить",
     "delete": "Удалить",
+    "done": "Готово",
     "download": "Скачать",
+    "edit": "Редактировать",
+    "emptySearch": "По вашему запросу {msg} результатов не найдено.",
+    "export": "Экспортировать",
+    "finish": "Завершить",
+    "goToFront": "Перейти на главную страницу",
+    "next": "Следующий",
+    "no": "Нет",
+    "noData": "Нет данных",
+    "ok": "Ок",
+    "previous": "Предыдущий",
+    "refresh": "Обновить",
+    "register": "Регистрация",
+    "remove": "Удалить",
+    "removeAll": "Удалить все",
+    "restore": "Восстановить",
+    "save": "Сохранить",
+    "search": "Поиск",
+    "searching": "Поиск...",
+    "submit": "Отправить",
+    "unregister": "Отменить регистрацию",
     "upload": "Загрузить",
-    "restore": "Восстановить"
+    "yes": "Да"
   },
-  "noData": {
-    "noMatches": "Нет элементов, соответствующих критериям",
-    "loading": "Загрузка... Пожалуйста, подождите"
+  "alert": {
+    "count": "Количество одинаковых ошибок:",
+    "id": "ID"
   },
-  "keys": {
-    "gotIt": "Понятно"
-  },
-  "global": {
-    "all": "Все",
-    "name": "Имя"
+  "apiKey": {
+    "createApiKey": {
+      "button": "СОЗДАТЬ API КЛЮЧ",
+      "step": {
+        "keyDetails": {
+          "apiKey": "API ключ",
+          "apiKeyID": "ID API ключа",
+          "assignedRoles": "Назначенные роли",
+          "createKeyButton": "Создать ключ",
+          "name": "Подробности ключа",
+          "note": "ПРИМЕЧАНИЕ: сохраните API ключ в безопасном месте. API ключ виден только во время его создания. Он не будет показан снова и не может быть восстановлен позже."
+        },
+        "roles": {
+          "description": "Пожалуйста, выберите роли, связанные с API ключом. Роли определяют права, предоставляемые API ключу.",
+          "name": "Роли",
+          "selectRoles": "Выбрать роли"
+        }
+      },
+      "success": "API ключ успешно создан",
+      "title": "Создать API ключ"
+    },
+    "edit": {
+      "roleRemoveOnly": "(только удаление)"
+    },
+    "role": {
+      "XROAD_REGISTRATION_OFFICER": "Регистратор",
+      "XROAD_SECURITY_OFFICER": "Офицер безопасности",
+      "XROAD_SYSTEM_ADMINISTRATOR": "Системный администратор"
+    },
+    "table": {
+      "action": {
+        "edit": {
+          "button": "Редактировать",
+          "dialog": {
+            "message": "Роли, связанные с API ключом:",
+            "title": "Редактировать API ключ (ID: {id})"
+          },
+          "success": "API ключ с ID {id} сохранен"
+        },
+        "revoke": {
+          "button": "Отозвать ключ",
+          "confirmationDialog": {
+            "message": "Вы уверены, что хотите отозвать API ключ с ID {id}?",
+            "title": "Вы уверены?"
+          },
+          "success": "API ключ с ID {id} успешно отозван"
+        }
+      },
+      "header": {
+        "id": "ID",
+        "roles": "Роли"
+      }
+    }
   },
   "backup": {
+    "createBackup": {
+      "button": "Создать резервную копию",
+      "messages": {
+        "localConfWarning": "Предупреждение! Файл “/etc/xroad/services/local.conf”, используемый для переопределения конфигураций, устарел и больше не включается в резервные копии. Вместо него следует использовать файл “/etc/xroad/services/local.properties”.",
+        "success": "Резервная копия {file} успешно создана"
+      }
+    },
     "deleteBackup": {
       "dialog": {
         "confirmation": "Вы уверены, что хотите удалить резервную копию {file}?",
@@ -44,13 +118,6 @@
       },
       "success": "Конфигурация восстановлена из {file}"
     },
-    "createBackup": {
-      "button": "Создать резервную копию",
-      "messages": {
-        "success": "Резервная копия {file} успешно создана",
-        "localConfWarning": "Предупреждение! Файл “/etc/xroad/services/local.conf”, используемый для переопределения конфигураций, устарел и больше не включается в резервные копии. Вместо него следует использовать файл “/etc/xroad/services/local.properties”."
-      }
-    },
     "uploadBackup": {
       "button": "Загрузить резервную копию",
       "confirmationDialog": {
@@ -60,13 +127,142 @@
       "success": "Резервная копия {file} успешно загружена"
     }
   },
+  "cert": {
+    "certificate": "Сертификат",
+    "hashInfo": "Хэш (SHA-256)",
+    "keyUsage": {
+      "CRL_SIGN": "Подпись CRL",
+      "DATA_ENCIPHERMENT": "Шифрование данных",
+      "DECIPHER_ONLY": "Только расшифровка",
+      "DIGITAL_SIGNATURE": "Цифровая подпись",
+      "ENCIPHER_ONLY": "Только шифрование",
+      "KEY_AGREEMENT": "Согласование ключей",
+      "KEY_CERT_SIGN": "Подпись сертификата",
+      "KEY_ENCIPHERMENT": "Шифрование ключей",
+      "NON_REPUDIATION": "Отказ от ответственности"
+    },
+    "rsaExp": "Экспонента открытого RSA ключа",
+    "rsaModulus": "Модуль открытого RSA ключа"
+  },
+  "error_code": {
+    "api_key_not_found": "API ключ не найден",
+    "backup_file_not_found": "Файл резервной копии не найден",
+    "backup_generation_failed": "Не удалось создать резервную копию",
+    "backup_restore_interrupted": "Восстановление резервной копии прервано",
+    "core": {
+      "Signer": {
+        "CertNotFound": "Сертификация не найдена",
+        "KeyNotFound": "Ключ не найден",
+        "PinIncorrect": "Неверный PIN-код",
+        "TokenNotAvailable": "Токен недоступен",
+        "TokenNotFound": "Токен не найден",
+        "UnknownMember": "Ядро X-Road - подписывающее устройство: Неизвестный участник"
+      }
+    },
+    "generate_backup_interrupted": "Создание резервной копии прервано",
+    "internal_error": "Внутренняя ошибка. См. журналы сервера для получения дополнительной информации",
+    "invalid_backup_file": "Недопустимый файл резервной копии",
+    "invalid_certificate": "Недействительный сертификат X.509",
+    "invalid_distinguished_name": "Недопустимое отличительное имя",
+    "invalid_filename": "Недопустимое имя файла",
+    "resource_read_failed": "Не удалось прочитать ресурс",
+    "restore_process_failed": "Не удалось восстановить процесс",
+    "token_fetch_failed": "Ошибка получения токенов",
+    "token_not_found": "Токен не найден",
+    "token_weak_pin": "Предоставленный PIN-код слишком слаб",
+    "tr": {
+      "code": "Код: {0}",
+      "pin_min_char_classes_count": "Минимальное количество классов символов PIN-кода: {0}",
+      "pin_min_length": "Минимальная длина PIN-кода: {0}"
+    },
+    "validation_failure": "Ошибка проверки"
+  },
+  "fields": {
+    "code": "Код",
+    "description": "Описание",
+    "memberClass": "Класс участника",
+    "password": "Пароль",
+    "securityServerCode": "Код сервера безопасности",
+    "shared": "sharedlib",
+    "username": "LIB-Имя пользователя"
+  },
+  "footer": {
+    "copyright": {
+      "company": "Nordic Institute for Interoperability Solutions (NIIS)",
+      "licenceInfo": "Информация о лицензии",
+      "title": "Авторские права"
+    },
+    "software": {
+      "feedback": "Обратная связь",
+      "title": "Программное обеспечение",
+      "versionPrefix": "X-Road"
+    }
+  },
+  "global": {
+    "all": "Все",
+    "name": "Имя"
+  },
+  "keys": {
+    "gotIt": "Понятно"
+  },
+  "locals_demo": "Это локализовано в библиотеке",
+  "login": {
+    "errorMsg401": "Неверное имя пользователя или пароль",
+    "generalError": "Не удалось войти. Пожалуйста, попробуйте еще раз.",
+    "logIn": "Войти",
+    "logOut": "Выйти"
+  },
+  "logout": {
+    "idleWarning": "Вы были неактивны в течение 30 минут, и ваша сессия истекла. По соображениям безопасности вы будете автоматически выведены из системы.",
+    "sessionExpired": "Сессия истекла"
+  },
+  "noData": {
+    "loading": "Загрузка... Пожалуйста, подождите",
+    "noBackups": "Резервных копий пока нет",
+    "noCertificate": "Нет сертификата",
+    "noCertificates": "Нет сертификатов",
+    "noData": "Нет данных",
+    "noMatches": "Нет элементов, соответствующих критериям",
+    "noServices": "Нет сервисов",
+    "noTokens": "Нет токенов"
+  },
+  "type": "Тип",
+  "validation": {
+    "messages": {
+      "address": "Поле {field} содержит недопустимые символы"
+    }
+  },
   "validationError": {
+    "AssertFalse": "значение должно быть 'false'",
+    "AssertTrue": "значение должно быть 'true'",
+    "DecimalMax": "числовое значение превышает допустимый максимум",
+    "DecimalMin": "числовое значение ниже допустимого минимума",
+    "Digits": "значение должно содержать только цифры",
+    "Email": "значение не соответствует формату электронной почты",
+    "Future": "значение даты и времени должно быть в будущем",
+    "FutureOrPresent": "значение даты и времени должно быть в настоящем или будущем",
+    "Max": "числовое значение превышает допустимый максимум",
+    "Min": "числовое значение ниже допустимого минимума",
+    "Negative": "числовое значение должно быть меньше нуля",
+    "NegativeOrZero": "числовое значение должно быть меньше или равно нулю",
+    "NoBackslashes": "значение не должно содержать обратные слэши (\\)",
+    "NoColons": "значение не должно содержать двоеточия (:)",
+    "NoForwardslashes": "значение не должно содержать прямые слэши (/)",
+    "NoPercents": "значение не должно содержать символы процента (%)",
+    "NoSemicolons": "значение не должно содержать точки с запятой (;)",
+    "Normalized": "значение должно быть нормализовано",
+    "NotBlank": "значение не должно быть не заполненным",
+    "NotEmpty": "значение не должно быть пустым",
+    "NotNull": "значение обязательно",
+    "Null": "значение не должно быть установлено",
+    "Past": "значение даты и времени должно быть в прошлом",
+    "PastOrPresent": "значение даты и времени должно быть в настоящем или прошлом",
+    "Pattern": "значение не соответствует требуемому формату",
+    "Positive": "числовое значение должно быть больше нуля",
+    "PositiveOrZero": "числовое значение должно быть больше или равно нулю",
+    "Size": "значение не соответствует требованиям по длине",
     "ValidHostAddress": "Требуется корректное полностью квалифицированное доменное имя (например, host.example.org) или публичный IP-адрес (например, 192.168.123.123)",
     "ValidHostAddressField": "Требуется корректный IP-адрес или полностью квалифицированное доменное имя"
   },
-  "validation": {
-    "messages": {
-      "address" : "Поле {field} содержит недопустимые символы"
-    }
-  }
+  "warning": "Предупреждение"
 }
