--- a/src/central-server/admin-service/ui/src/locales/es.json
+++ b/src/central-server/admin-service/ui/src/locales/es.json
@@ -55,7 +55,6 @@
     "init_software_token_failed": "Falló la inicialización del token de software",
     "instance_identifier_not_set": "Parámetro del sistema, por ejemplo, el identificador no está establecido",
     "intermediate_ca_not_found": "CA intermedia no encontrada",
-    "internal_error": "Error interno. Consulte los registros del servidor para más detalles",
     "invalid_address_char": "El campo de la dirección contiene caracteres no válidos",
     "invalid_encoded_id": "El ID codificado no es válido",
     "invalid_file_content_type": "Tipo de contenido no válido en el archivo o fichero cargado",
@@ -119,7 +118,6 @@
     "token_invalid_characters": "El código PIN proporcionado contiene caracteres no válidos",
     "token_pin_final_try": "Intentos restantes: 1",
     "token_pin_locked": "PIN de token bloqueado",
-    "tr": {},
     "trusted_anchor_not_found": "Ancla de confianza no encontrada",
     "trusted_anchor_verification_failed": "La verificación del Ancla de confianza falló",
     "unknown_configuration_part": "Parte de configuración desconocida"
@@ -336,8 +334,7 @@
     "logIn": "Acceso",
     "logOut": "Finalizar la sesión",
     "signKey": "Clave de firma",
-    "title": "Claves de firma",
-    "token": "Token:"
+    "title": "Claves de firma"
   },
   "managementRequestDetails": {
     "address": "DIRECCIÓN",
