chore: refactor exceptions for Rest API
small fixes

Refs: XRDDEV-2807

--- a/src/shared-ui/src/locales/en.json
+++ b/src/shared-ui/src/locales/en.json
@@ -208,7 +208,10 @@
     "name": "Name"
   },
   "keys": {
-    "gotIt": "Got it"
+    "gotIt": "Got it",
+    "token": {
+      "label": "Token:"
+    }
   },
   "locals_demo": "This is localised in library",
   "login": {
