--- a/src/shared-ui/src/locales/es.json
+++ b/src/shared-ui/src/locales/es.json
@@ -207,7 +207,10 @@
     "name": "Nombre"
   },
   "keys": {
-    "gotIt": "Entiendo"
+    "gotIt": "Entiendo",
+    "token": {
+      "label": "Token:"
+    }
   },
   "locals_demo": "Esto se localiza en la biblioteca",
   "login": {
