--- a/src/shared-ui/src/locales/et.json
+++ b/src/shared-ui/src/locales/et.json
@@ -204,7 +204,10 @@
     "name": "Nimi"
   },
   "keys": {
-    "gotIt": "Sain aru"
+    "gotIt": "Sain aru",
+    "token": {
+      "label": "Krüptomoodul:"
+    }
   },
   "locals_demo": "Lokaliseeritakse teegis",
   "login": {
