--- a/src/shared-ui/src/locales/ru.json
+++ b/src/shared-ui/src/locales/ru.json
@@ -203,7 +203,10 @@
     "name": "Имя"
   },
   "keys": {
-    "gotIt": "Понятно"
+    "gotIt": "Понятно",
+    "token": {
+      "label": "Токен:"
+    }
   },
   "locals_demo": "Это локализовано в библиотеке",
   "login": {
