--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -385,6 +385,8 @@
         "title": "Decline management request"
       }
     },
+    "maintenanceModeDisable": "Disable maintenance mode",
+    "maintenanceModeEnable": "Enable maintenance mode",
     "pending": "Pending",
     "rejected": "Rejected",
     "removeCertificate": "Remove Certificate",
