--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -471,6 +471,7 @@
       }
     },
     "disabled": "Temporarily disabled",
+    "maintenanceMode": "In maintenance mode",
     "ownerClass": "Owner Class",
     "ownerCode": "Owner Code",
     "ownerName": "Owner Name",
